Add modified html

--- a/index.html
+++ b/index.html
@@ -398,12 +398,12 @@
 
         <hr>
         <ul class="list-inline">
-          <li><a href="http://www.twitter.com/wiredwiki">Twitter</a></li>
-          <li><a href="http://www.facebook.com/askorama">Facebook</a></li>
-          <li><a href="http://www.youtube.com/wiredwiki">YouTube</a></li>
+          <li><a href="http://www.twitter.com/GlobalDStore">Twitter</a></li>
+          <li><a href="https://www.linkedin.com/in/raynold-gyasi-036631119/">Linkedin</a></li>
+          <li><a href="https://github.com/speedyray">GitHub</a></li>
         </ul>
 
-        <p>&copy; Copyright @ 2014</p>
+        <p>&copy; Copyright @ 2019</p>
 
       </div><!-- end Container-->
       
